# time-machine-labs

./: index.md
lab_2/: how-to-run-jupyter.md
lab_2/.ipynb_checkpoints/: python-essentials-checkpoint.ipynb
lab_3/: exercises.py  tictactoe_impl.py
lab_3/.ipynb_checkpoints/: OOPAndPackaging-checkpoint.ipynb  exercises-checkpoint.py  hello-checkpoint.py
lab_3/cards/: types.py  types_impl.py
lab_4/: repl-packages-venv-poetry.md
lab_5/: hackernews.py  lab5.ipynb  news.py  pyproject.toml
