[tool.poetry]
name = "lab_5"
version = "0.1.0"
description = "Trello and requests"
authors = ["Zoltán T. Szeredi <zoltan@szeredi.ro>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
black = "^19.10b0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
